@@ -1,5 +1,6 @@
 2012-02-18  Kirit Saelensminde  <kirit@felspar.com>
  Added a proxy method for the model create operation. This has also changed the data returned by the old create operation.
+ Added CSRF bypassing on the Slumber views (if the version of Django uses CSRF).
 
 2012-02-17  Kirit Saelensminde  <kirit@felspar.com>
  Added tests for Django 1.4.
